--- a/requirements.txt
+++ b/requirements.txt
@@ -227,3 +227,10 @@ zeromq                    4.3.4                h2531618_0
 zipp                      3.1.0                    pypi_0    pypi
 zlib                      1.2.11               h7b6447c_3  
 zstd                      1.4.9                haebb681_0  
+
+requests~=2.24.0
+tensorflow~=2.3.0
+numpy~=1.19.2
+pandas~=1.1.5
+nltk~=3.5
+scikit-learn~=0.23.2
